Fix compact scrollbar going off the bottom

--- a/src/sidebars/sidebar-compact.less
+++ b/src/sidebars/sidebar-compact.less
@@ -23,7 +23,7 @@
   }
 
   .favourites, #favourite-scroll, .favourite {
-    .size(@width: 100%, @height: inherit);
+    width: 100%;
   }
 
   .search {
